parser.output
Terminals which are not used

   TOKEN_ERROR


Grammar

    0 $accept: programa $end

    1 programa: lista_declaracoes

    2 lista_declaracoes: declaracao
    3                  | lista_declaracoes declaracao

    4 declaracao: declaracao_variavel ';'
    5           | declaracao_vetor ';'
    6           | declaracao_funcao

    7 declaracao_variavel: tipo TK_IDENTIFIER ':' valor_inicial

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER '[' LIT_INT ']'

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' lista_parametros ')' bloco
   11                  | tipo TK_IDENTIFIER '(' ')' bloco

   12 parametro: tipo TK_IDENTIFIER

   13 tipo: KW_CHAR
   14     | KW_FLOAT
   15     | KW_BOOL
   16     | KW_INT

   17 valor_inicial: LIT_INT
   18              | LIT_CHAR
   19              | LIT_REAL
   20              | LIT_FALSE
   21              | LIT_TRUE

   22 bloco: '{' lista_comandos '}'
   23      | '{' '}'

   24 comando: atribuicao
   25        | controle_fluxo
   26        | KW_READ tipo TK_IDENTIFIER ';'
   27        | KW_PRINT LIT_STRING ';'
   28        | KW_PRINT tipo expressao ';'
   29        | KW_RETURN expressao ';'
   30        | bloco
   31        | ';'

   32 atribuicao: TK_IDENTIFIER '=' expressao ';'
   33           | vetor '=' expressao ';'

   34 vetor: TK_IDENTIFIER '[' LIT_INT ']'
   35      | TK_IDENTIFIER '[' TK_IDENTIFIER ']'

   36 controle_fluxo: KW_IF '(' expressao ')' comando
   37               | KW_IF '(' expressao ')' comando KW_ELSE comando
   38               | KW_WHILE '(' expressao ')' bloco

   39 expressao: expressao '+' expressao
   40          | expressao '-' expressao
   41          | expressao '*' expressao
   42          | expressao '/' expressao
   43          | expressao '<' expressao
   44          | expressao '>' expressao
   45          | expressao '|' expressao
   46          | expressao '&' expressao
   47          | expressao OPERATOR_LE expressao
   48          | expressao OPERATOR_GE expressao
   49          | expressao OPERATOR_EQ expressao
   50          | expressao OPERATOR_DIF expressao
   51          | '(' expressao ')'
   52          | TK_IDENTIFIER
   53          | vetor
   54          | LIT_INT
   55          | LIT_CHAR
   56          | LIT_REAL
   57          | LIT_FALSE
   58          | LIT_TRUE
   59          | chamada_funcao

   60 lista_comandos: comando
   61               | comando lista_comandos

   62 valores_iniciais: valor_inicial valores_iniciais
   63                 | valor_inicial

   64 lista_chamada: expressao ',' lista_chamada
   65              | expressao

   66 lista_parametros: parametro ',' lista_parametros
   67                 | parametro

   68 chamada_funcao: TK_IDENTIFIER '(' lista_chamada ')'
   69               | TK_IDENTIFIER '(' ')'


Terminals, with rules where they appear

$end (0) 0
'&' (38) 46
'(' (40) 10 11 36 37 38 51 68 69
')' (41) 10 11 36 37 38 51 68 69
'*' (42) 41
'+' (43) 39
',' (44) 64 66
'-' (45) 40
'/' (47) 42
':' (58) 7 8
';' (59) 4 5 26 27 28 29 31 32 33
'<' (60) 43
'=' (61) 32 33
'>' (62) 44
'[' (91) 8 9 34 35
']' (93) 8 9 34 35
'{' (123) 22 23
'|' (124) 45
'}' (125) 22 23
error (256)
KW_CHAR (258) 13
KW_INT (259) 16
KW_FLOAT (260) 14
KW_BOOL (261) 15
KW_IF (262) 36 37
KW_ELSE (263) 37
KW_WHILE (264) 38
KW_READ (265) 26
KW_PRINT (266) 27 28
KW_RETURN (267) 29
OPERATOR_LE (268) 47
OPERATOR_GE (269) 48
OPERATOR_EQ (270) 49
OPERATOR_DIF (271) 50
TK_IDENTIFIER (272) 7 8 9 10 11 12 26 32 34 35 52 68 69
LIT_INT (273) 8 9 17 34 54
LIT_CHAR (274) 18 55
LIT_REAL (275) 19 56
LIT_FALSE (276) 20 57
LIT_TRUE (277) 21 58
LIT_STRING (278) 27
TOKEN_ERROR (279)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
programa (44)
    on left: 1, on right: 0
lista_declaracoes (45)
    on left: 2 3, on right: 1 3
declaracao (46)
    on left: 4 5 6, on right: 2 3
declaracao_variavel (47)
    on left: 7, on right: 4
declaracao_vetor (48)
    on left: 8 9, on right: 5
declaracao_funcao (49)
    on left: 10 11, on right: 6
parametro (50)
    on left: 12, on right: 66 67
tipo (51)
    on left: 13 14 15 16, on right: 7 8 9 10 11 12 26 28
valor_inicial (52)
    on left: 17 18 19 20 21, on right: 7 62 63
bloco (53)
    on left: 22 23, on right: 10 11 30 38
comando (54)
    on left: 24 25 26 27 28 29 30 31, on right: 36 37 60 61
atribuicao (55)
    on left: 32 33, on right: 24
vetor (56)
    on left: 34 35, on right: 33 53
controle_fluxo (57)
    on left: 36 37 38, on right: 25
expressao (58)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59, on right: 28 29 32 33 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 64 65
lista_comandos (59)
    on left: 60 61, on right: 22 61
valores_iniciais (60)
    on left: 62 63, on right: 8 62
lista_chamada (61)
    on left: 64 65, on right: 64 68
lista_parametros (62)
    on left: 66 67, on right: 10 66
chamada_funcao (63)
    on left: 68 69, on right: 59


state 0

    0 $accept: . programa $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4

    programa             go to state 5
    lista_declaracoes    go to state 6
    declaracao           go to state 7
    declaracao_variavel  go to state 8
    declaracao_vetor     go to state 9
    declaracao_funcao    go to state 10
    tipo                 go to state 11


state 1

   13 tipo: KW_CHAR .

    $default  reduce using rule 13 (tipo)


state 2

   16 tipo: KW_INT .

    $default  reduce using rule 16 (tipo)


state 3

   14 tipo: KW_FLOAT .

    $default  reduce using rule 14 (tipo)


state 4

   15 tipo: KW_BOOL .

    $default  reduce using rule 15 (tipo)


state 5

    0 $accept: programa . $end

    $end  shift, and go to state 12


state 6

    1 programa: lista_declaracoes .
    3 lista_declaracoes: lista_declaracoes . declaracao

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4

    $default  reduce using rule 1 (programa)

    declaracao           go to state 13
    declaracao_variavel  go to state 8
    declaracao_vetor     go to state 9
    declaracao_funcao    go to state 10
    tipo                 go to state 11


state 7

    2 lista_declaracoes: declaracao .

    $default  reduce using rule 2 (lista_declaracoes)


state 8

    4 declaracao: declaracao_variavel . ';'

    ';'  shift, and go to state 14


state 9

    5 declaracao: declaracao_vetor . ';'

    ';'  shift, and go to state 15


state 10

    6 declaracao: declaracao_funcao .

    $default  reduce using rule 6 (declaracao)


state 11

    7 declaracao_variavel: tipo . TK_IDENTIFIER ':' valor_inicial
    8 declaracao_vetor: tipo . TK_IDENTIFIER '[' LIT_INT ']' ':' valores_iniciais
    9                 | tipo . TK_IDENTIFIER '[' LIT_INT ']'
   10 declaracao_funcao: tipo . TK_IDENTIFIER '(' lista_parametros ')' bloco
   11                  | tipo . TK_IDENTIFIER '(' ')' bloco

    TK_IDENTIFIER  shift, and go to state 16


state 12

    0 $accept: programa $end .

    $default  accept


state 13

    3 lista_declaracoes: lista_declaracoes declaracao .

    $default  reduce using rule 3 (lista_declaracoes)


state 14

    4 declaracao: declaracao_variavel ';' .

    $default  reduce using rule 4 (declaracao)


state 15

    5 declaracao: declaracao_vetor ';' .

    $default  reduce using rule 5 (declaracao)


state 16

    7 declaracao_variavel: tipo TK_IDENTIFIER . ':' valor_inicial
    8 declaracao_vetor: tipo TK_IDENTIFIER . '[' LIT_INT ']' ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER . '[' LIT_INT ']'
   10 declaracao_funcao: tipo TK_IDENTIFIER . '(' lista_parametros ')' bloco
   11                  | tipo TK_IDENTIFIER . '(' ')' bloco

    ':'  shift, and go to state 17
    '['  shift, and go to state 18
    '('  shift, and go to state 19


state 17

    7 declaracao_variavel: tipo TK_IDENTIFIER ':' . valor_inicial

    LIT_INT    shift, and go to state 20
    LIT_CHAR   shift, and go to state 21
    LIT_REAL   shift, and go to state 22
    LIT_FALSE  shift, and go to state 23
    LIT_TRUE   shift, and go to state 24

    valor_inicial  go to state 25


state 18

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' . LIT_INT ']' ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER '[' . LIT_INT ']'

    LIT_INT  shift, and go to state 26


state 19

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' . lista_parametros ')' bloco
   11                  | tipo TK_IDENTIFIER '(' . ')' bloco

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4
    ')'       shift, and go to state 27

    parametro         go to state 28
    tipo              go to state 29
    lista_parametros  go to state 30


state 20

   17 valor_inicial: LIT_INT .

    $default  reduce using rule 17 (valor_inicial)


state 21

   18 valor_inicial: LIT_CHAR .

    $default  reduce using rule 18 (valor_inicial)


state 22

   19 valor_inicial: LIT_REAL .

    $default  reduce using rule 19 (valor_inicial)


state 23

   20 valor_inicial: LIT_FALSE .

    $default  reduce using rule 20 (valor_inicial)


state 24

   21 valor_inicial: LIT_TRUE .

    $default  reduce using rule 21 (valor_inicial)


state 25

    7 declaracao_variavel: tipo TK_IDENTIFIER ':' valor_inicial .

    $default  reduce using rule 7 (declaracao_variavel)


state 26

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT . ']' ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER '[' LIT_INT . ']'

    ']'  shift, and go to state 31


state 27

   11 declaracao_funcao: tipo TK_IDENTIFIER '(' ')' . bloco

    '{'  shift, and go to state 32

    bloco  go to state 33


state 28

   66 lista_parametros: parametro . ',' lista_parametros
   67                 | parametro .

    ','  shift, and go to state 34

    $default  reduce using rule 67 (lista_parametros)


state 29

   12 parametro: tipo . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 35


state 30

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' lista_parametros . ')' bloco

    ')'  shift, and go to state 36


state 31

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' . ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER '[' LIT_INT ']' .

    ':'  shift, and go to state 37

    $default  reduce using rule 9 (declaracao_vetor)


state 32

   22 bloco: '{' . lista_comandos '}'
   23      | '{' . '}'

    KW_IF          shift, and go to state 38
    KW_WHILE       shift, and go to state 39
    KW_READ        shift, and go to state 40
    KW_PRINT       shift, and go to state 41
    KW_RETURN      shift, and go to state 42
    TK_IDENTIFIER  shift, and go to state 43
    ';'            shift, and go to state 44
    '{'            shift, and go to state 32
    '}'            shift, and go to state 45

    bloco           go to state 46
    comando         go to state 47
    atribuicao      go to state 48
    vetor           go to state 49
    controle_fluxo  go to state 50
    lista_comandos  go to state 51


state 33

   11 declaracao_funcao: tipo TK_IDENTIFIER '(' ')' bloco .

    $default  reduce using rule 11 (declaracao_funcao)


state 34

   66 lista_parametros: parametro ',' . lista_parametros

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4

    parametro         go to state 28
    tipo              go to state 29
    lista_parametros  go to state 52


state 35

   12 parametro: tipo TK_IDENTIFIER .

    $default  reduce using rule 12 (parametro)


state 36

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' lista_parametros ')' . bloco

    '{'  shift, and go to state 32

    bloco  go to state 53


state 37

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' ':' . valores_iniciais

    LIT_INT    shift, and go to state 20
    LIT_CHAR   shift, and go to state 21
    LIT_REAL   shift, and go to state 22
    LIT_FALSE  shift, and go to state 23
    LIT_TRUE   shift, and go to state 24

    valor_inicial     go to state 54
    valores_iniciais  go to state 55


state 38

   36 controle_fluxo: KW_IF . '(' expressao ')' comando
   37               | KW_IF . '(' expressao ')' comando KW_ELSE comando

    '('  shift, and go to state 56


state 39

   38 controle_fluxo: KW_WHILE . '(' expressao ')' bloco

    '('  shift, and go to state 57


state 40

   26 comando: KW_READ . tipo TK_IDENTIFIER ';'

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4

    tipo  go to state 58


state 41

   27 comando: KW_PRINT . LIT_STRING ';'
   28        | KW_PRINT . tipo expressao ';'

    KW_CHAR     shift, and go to state 1
    KW_INT      shift, and go to state 2
    KW_FLOAT    shift, and go to state 3
    KW_BOOL     shift, and go to state 4
    LIT_STRING  shift, and go to state 59

    tipo  go to state 60


state 42

   29 comando: KW_RETURN . expressao ';'

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 69
    chamada_funcao  go to state 70


state 43

   32 atribuicao: TK_IDENTIFIER . '=' expressao ';'
   34 vetor: TK_IDENTIFIER . '[' LIT_INT ']'
   35      | TK_IDENTIFIER . '[' TK_IDENTIFIER ']'

    '['  shift, and go to state 71
    '='  shift, and go to state 72


state 44

   31 comando: ';' .

    $default  reduce using rule 31 (comando)


state 45

   23 bloco: '{' '}' .

    $default  reduce using rule 23 (bloco)


state 46

   30 comando: bloco .

    $default  reduce using rule 30 (comando)


state 47

   60 lista_comandos: comando .
   61               | comando . lista_comandos

    KW_IF          shift, and go to state 38
    KW_WHILE       shift, and go to state 39
    KW_READ        shift, and go to state 40
    KW_PRINT       shift, and go to state 41
    KW_RETURN      shift, and go to state 42
    TK_IDENTIFIER  shift, and go to state 43
    ';'            shift, and go to state 44
    '{'            shift, and go to state 32

    $default  reduce using rule 60 (lista_comandos)

    bloco           go to state 46
    comando         go to state 47
    atribuicao      go to state 48
    vetor           go to state 49
    controle_fluxo  go to state 50
    lista_comandos  go to state 73


state 48

   24 comando: atribuicao .

    $default  reduce using rule 24 (comando)


state 49

   33 atribuicao: vetor . '=' expressao ';'

    '='  shift, and go to state 74


state 50

   25 comando: controle_fluxo .

    $default  reduce using rule 25 (comando)


state 51

   22 bloco: '{' lista_comandos . '}'

    '}'  shift, and go to state 75


state 52

   66 lista_parametros: parametro ',' lista_parametros .

    $default  reduce using rule 66 (lista_parametros)


state 53

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' lista_parametros ')' bloco .

    $default  reduce using rule 10 (declaracao_funcao)


state 54

   62 valores_iniciais: valor_inicial . valores_iniciais
   63                 | valor_inicial .

    LIT_INT    shift, and go to state 20
    LIT_CHAR   shift, and go to state 21
    LIT_REAL   shift, and go to state 22
    LIT_FALSE  shift, and go to state 23
    LIT_TRUE   shift, and go to state 24

    $default  reduce using rule 63 (valores_iniciais)

    valor_inicial     go to state 54
    valores_iniciais  go to state 76


state 55

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' ':' valores_iniciais .

    $default  reduce using rule 8 (declaracao_vetor)


state 56

   36 controle_fluxo: KW_IF '(' . expressao ')' comando
   37               | KW_IF '(' . expressao ')' comando KW_ELSE comando

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 77
    chamada_funcao  go to state 70


state 57

   38 controle_fluxo: KW_WHILE '(' . expressao ')' bloco

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 78
    chamada_funcao  go to state 70


state 58

   26 comando: KW_READ tipo . TK_IDENTIFIER ';'

    TK_IDENTIFIER  shift, and go to state 79


state 59

   27 comando: KW_PRINT LIT_STRING . ';'

    ';'  shift, and go to state 80


state 60

   28 comando: KW_PRINT tipo . expressao ';'

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 81
    chamada_funcao  go to state 70


state 61

   34 vetor: TK_IDENTIFIER . '[' LIT_INT ']'
   35      | TK_IDENTIFIER . '[' TK_IDENTIFIER ']'
   52 expressao: TK_IDENTIFIER .
   68 chamada_funcao: TK_IDENTIFIER . '(' lista_chamada ')'
   69               | TK_IDENTIFIER . '(' ')'

    '['  shift, and go to state 71
    '('  shift, and go to state 82

    $default  reduce using rule 52 (expressao)


state 62

   54 expressao: LIT_INT .

    $default  reduce using rule 54 (expressao)


state 63

   55 expressao: LIT_CHAR .

    $default  reduce using rule 55 (expressao)


state 64

   56 expressao: LIT_REAL .

    $default  reduce using rule 56 (expressao)


state 65

   57 expressao: LIT_FALSE .

    $default  reduce using rule 57 (expressao)


state 66

   58 expressao: LIT_TRUE .

    $default  reduce using rule 58 (expressao)


state 67

   51 expressao: '(' . expressao ')'

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 83
    chamada_funcao  go to state 70


state 68

   53 expressao: vetor .

    $default  reduce using rule 53 (expressao)


state 69

   29 comando: KW_RETURN expressao . ';'
   39 expressao: expressao . '+' expressao
   40          | expressao . '-' expressao
   41          | expressao . '*' expressao
   42          | expressao . '/' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '|' expressao
   46          | expressao . '&' expressao
   47          | expressao . OPERATOR_LE expressao
   48          | expressao . OPERATOR_GE expressao
   49          | expressao . OPERATOR_EQ expressao
   50          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_DIF  shift, and go to state 87
    '+'           shift, and go to state 88
    '-'           shift, and go to state 89
    '*'           shift, and go to state 90
    '/'           shift, and go to state 91
    '<'           shift, and go to state 92
    '>'           shift, and go to state 93
    '&'           shift, and go to state 94
    '|'           shift, and go to state 95
    ';'           shift, and go to state 96


state 70

   59 expressao: chamada_funcao .

    $default  reduce using rule 59 (expressao)


state 71

   34 vetor: TK_IDENTIFIER '[' . LIT_INT ']'
   35      | TK_IDENTIFIER '[' . TK_IDENTIFIER ']'

    TK_IDENTIFIER  shift, and go to state 97
    LIT_INT        shift, and go to state 98


state 72

   32 atribuicao: TK_IDENTIFIER '=' . expressao ';'

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 99
    chamada_funcao  go to state 70


state 73

   61 lista_comandos: comando lista_comandos .

    $default  reduce using rule 61 (lista_comandos)


state 74

   33 atribuicao: vetor '=' . expressao ';'

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 100
    chamada_funcao  go to state 70


state 75

   22 bloco: '{' lista_comandos '}' .

    $default  reduce using rule 22 (bloco)


state 76

   62 valores_iniciais: valor_inicial valores_iniciais .

    $default  reduce using rule 62 (valores_iniciais)


state 77

   36 controle_fluxo: KW_IF '(' expressao . ')' comando
   37               | KW_IF '(' expressao . ')' comando KW_ELSE comando
   39 expressao: expressao . '+' expressao
   40          | expressao . '-' expressao
   41          | expressao . '*' expressao
   42          | expressao . '/' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '|' expressao
   46          | expressao . '&' expressao
   47          | expressao . OPERATOR_LE expressao
   48          | expressao . OPERATOR_GE expressao
   49          | expressao . OPERATOR_EQ expressao
   50          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_DIF  shift, and go to state 87
    '+'           shift, and go to state 88
    '-'           shift, and go to state 89
    '*'           shift, and go to state 90
    '/'           shift, and go to state 91
    '<'           shift, and go to state 92
    '>'           shift, and go to state 93
    '&'           shift, and go to state 94
    '|'           shift, and go to state 95
    ')'           shift, and go to state 101


state 78

   38 controle_fluxo: KW_WHILE '(' expressao . ')' bloco
   39 expressao: expressao . '+' expressao
   40          | expressao . '-' expressao
   41          | expressao . '*' expressao
   42          | expressao . '/' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '|' expressao
   46          | expressao . '&' expressao
   47          | expressao . OPERATOR_LE expressao
   48          | expressao . OPERATOR_GE expressao
   49          | expressao . OPERATOR_EQ expressao
   50          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_DIF  shift, and go to state 87
    '+'           shift, and go to state 88
    '-'           shift, and go to state 89
    '*'           shift, and go to state 90
    '/'           shift, and go to state 91
    '<'           shift, and go to state 92
    '>'           shift, and go to state 93
    '&'           shift, and go to state 94
    '|'           shift, and go to state 95
    ')'           shift, and go to state 102


state 79

   26 comando: KW_READ tipo TK_IDENTIFIER . ';'

    ';'  shift, and go to state 103


state 80

   27 comando: KW_PRINT LIT_STRING ';' .

    $default  reduce using rule 27 (comando)


state 81

   28 comando: KW_PRINT tipo expressao . ';'
   39 expressao: expressao . '+' expressao
   40          | expressao . '-' expressao
   41          | expressao . '*' expressao
   42          | expressao . '/' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '|' expressao
   46          | expressao . '&' expressao
   47          | expressao . OPERATOR_LE expressao
   48          | expressao . OPERATOR_GE expressao
   49          | expressao . OPERATOR_EQ expressao
   50          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_DIF  shift, and go to state 87
    '+'           shift, and go to state 88
    '-'           shift, and go to state 89
    '*'           shift, and go to state 90
    '/'           shift, and go to state 91
    '<'           shift, and go to state 92
    '>'           shift, and go to state 93
    '&'           shift, and go to state 94
    '|'           shift, and go to state 95
    ';'           shift, and go to state 104


state 82

   68 chamada_funcao: TK_IDENTIFIER '(' . lista_chamada ')'
   69               | TK_IDENTIFIER '(' . ')'

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    ')'            shift, and go to state 105
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 106
    lista_chamada   go to state 107
    chamada_funcao  go to state 70


state 83

   39 expressao: expressao . '+' expressao
   40          | expressao . '-' expressao
   41          | expressao . '*' expressao
   42          | expressao . '/' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '|' expressao
   46          | expressao . '&' expressao
   47          | expressao . OPERATOR_LE expressao
   48          | expressao . OPERATOR_GE expressao
   49          | expressao . OPERATOR_EQ expressao
   50          | expressao . OPERATOR_DIF expressao
   51          | '(' expressao . ')'

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_DIF  shift, and go to state 87
    '+'           shift, and go to state 88
    '-'           shift, and go to state 89
    '*'           shift, and go to state 90
    '/'           shift, and go to state 91
    '<'           shift, and go to state 92
    '>'           shift, and go to state 93
    '&'           shift, and go to state 94
    '|'           shift, and go to state 95
    ')'           shift, and go to state 108


state 84

   47 expressao: expressao OPERATOR_LE . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 109
    chamada_funcao  go to state 70


state 85

   48 expressao: expressao OPERATOR_GE . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 110
    chamada_funcao  go to state 70


state 86

   49 expressao: expressao OPERATOR_EQ . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 111
    chamada_funcao  go to state 70


state 87

   50 expressao: expressao OPERATOR_DIF . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 112
    chamada_funcao  go to state 70


state 88

   39 expressao: expressao '+' . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 113
    chamada_funcao  go to state 70


state 89

   40 expressao: expressao '-' . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 114
    chamada_funcao  go to state 70


state 90

   41 expressao: expressao '*' . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 115
    chamada_funcao  go to state 70


state 91

   42 expressao: expressao '/' . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 116
    chamada_funcao  go to state 70


state 92

   43 expressao: expressao '<' . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 117
    chamada_funcao  go to state 70


state 93

   44 expressao: expressao '>' . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 118
    chamada_funcao  go to state 70


state 94

   46 expressao: expressao '&' . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 119
    chamada_funcao  go to state 70


state 95

   45 expressao: expressao '|' . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INT        shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_REAL       shift, and go to state 64
    LIT_FALSE      shift, and go to state 65
    LIT_TRUE       shift, and go to state 66
    '('            shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 120
    chamada_funcao  go to state 70


state 96
